--- a/Lectures/Lecture6-Streams/Streams_Tutorial.ipynb
+++ b/Lectures/Lecture6-Streams/Streams_Tutorial.ipynb
@@ -72,26 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting code/twython_streaming.py\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "%%writefile code/twython_streaming.py\n",
+    "#%%writefile code/twitter_streaming_INITIALS.py\n",
     "import twython\n",
     "from twython import TwythonStreamer\n",
     "\n",
-    "OAUTH_TOKEN = \"YOUR_ACCESS_TOKEN\"\n",
-    "OAUTH_TOKEN_SECRET = \"YOUR_TOKEN_SECRET\"\n",
-    "APP_KEY = \"YOUR_CONSUMER_KEY\"\n",
-    "APP_SECRET = \"YOUR_CONSUMER_SECRET\"\n",
+    "OAUTH_TOKEN = \"925147453711683584-uokSHRKQ9yE3O8oKWAK7Mx38Rc2uOoT\"\n",
+    "OAUTH_TOKEN_SECRET = \"6PgetgqMvotN1zdj4BvqeWFgYcGUJeV5tL2sn1CaH3IQq\"\n",
+    "APP_KEY = \"Ots6pNpRnsVYzZsjAR6RI6kud\"\n",
+    "APP_SECRET = \"HJ7ViQh3jB6odaYontvLrNVpBgU6m3k9TVmiZzVLOmhMZ7WQmv\"\n",
     "\n",
     "class MyStreamer(TwythonStreamer):\n",
     "    def on_success(self, data):\n",
@@ -108,33 +102,35 @@
     "if __name__ == \"__main__\":\n",
     "    stream = MyStreamer(APP_KEY, APP_SECRET,\n",
     "                    OAUTH_TOKEN, OAUTH_TOKEN_SECRET)\n",
-    "    stream.statuses.filter(track=['python', 'javascript', 'ruby'])\n"
+    "    stream.statuses.filter(track=['python','java', 'ruby'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process is interrupted.\n"
+      "401\n"
      ]
     }
    ],
    "source": [
-    "%%sh \n",
-    "python code/twython_streaming_PS.py > twython_twits.txt"
+    "run code/twitter_streaming_INITIALS.py > twython_twits.txt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
     "# %load twython_twits.txt\n",
     "RT @CSGOEmpire: ❤️🗡️10x Ruby Gut Knife Giveaway with @anomalyxd\n",
     "\n",
@@ -254,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %load tweepy_twits.txt\n",
@@ -1040,7 +1038,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1151,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
